Use basic Base64 encoder and use HttpUrlConnection.disconnect to close resources